--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ content:
   - title: Highlights
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Awards - Developer Relations, Solutions Architecture, Software Architecture and Engineering 
+      Awards - Developer Relations, Solutions Architecture, Software Architecture and Software Engineering 
       - [Microsoft- Event Speaker Platinum](https://www.credly.com/badges/3574d574-4638-4f9f-a2cb-95305fa669c8)
       - [Microsoft- Event Speaker Gold](https://www.credly.com/badges/00190609-ed83-413e-a337-9bdc87db1112)
       - [Microsoft - Event Speaker Silver](https://www.credly.com/badges/87e92b22-3c04-4332-8d3e-82eec922da2d) 
