--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hello, I’m Juarez Junior, Azure Developer Engagement Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle and, Thought Leader and Technical Evangelist at IBM.
+  Hello, I’m Juarez Junior, Azure Developer Engagement Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
   I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering as well as startup relationship management comprising collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners. Ability to present to both technical and non-technical audiences as well as engage the C-Level in technology and business transformation journeys.
 
