--- a/_config.yml
+++ b/_config.yml
@@ -580,6 +580,15 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
+        title: Technological University Dublin
+        link: www.tudublin.ie     
+        caption: 2022
+        sub_title: PG in Digital Entrepreneurship
+
+  - title: Education # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
         title: LYIT
         link: www.lyit.ie     
         caption: 2021
