--- a/_config.yml
+++ b/_config.yml
@@ -599,7 +599,7 @@ content:
     content:
       - layout: left
         title: National College of Ireland
-        link: https://www.ncirl.ie/
+        link: www.ncirl.ie/
         caption: 2021
         sub_title: HD in Science in Computing - Cybersecurity
 
