--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ content:
       - [Microsoft- Event Speaker Platinum](https://www.credly.com/badges/3574d574-4638-4f9f-a2cb-95305fa669c8)
       - [Microsoft- Event Speaker Gold](https://www.credly.com/badges/00190609-ed83-413e-a337-9bdc87db1112)
       - [Microsoft - Event Speaker Silver](https://www.credly.com/badges/87e92b22-3c04-4332-8d3e-82eec922da2d) 
+      - [Microsoft - Hackathon Leader Silver](https://www.credly.com/earner/earned/badge/4e6f9488-a39a-4b17-8a39-17b0e02d0418) 
       - [Microsoft - External User Group Silver](https://www.credly.com/badges/29943bc3-c8f7-4af8-9010-7e761a5e079b) 
       - [Microsoft - Onboarding Buddy Gold](https://www.credly.com/badges/67feae69-f442-4266-a44b-9728514fa49d) 
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
