--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior
-title: Azure Developer Engagement Lead - Microsoft
+title: Azure Developer Relations Lead - Microsoft
 email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
 
@@ -52,7 +52,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hello, I’m Juarez Junior, Azure Developer Engagement Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
+  Hello, I’m Juarez Junior, Azure Developer Relations Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
   I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering as well as startup relationship management comprising collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners. Ability to present to both technical and non-technical audiences as well as engage the C-Level in technology and business transformation journeys.
 
@@ -82,7 +82,7 @@ content:
       - [Microsoft - Onboarding Buddy Gold](https://www.credly.com/badges/67feae69-f442-4266-a44b-9728514fa49d) 
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
-      - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)
+      - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)      
       - [IBM Technical Rock Star for IBM Cloud](https://www.flickr.com/photos/15201803@N00/29191132794/in/photostream/)
       - [IBM Technical RockStar for IBM Cloud - FY 2016 x 4 times](https://www.flickr.com/photos/15201803@N00/34916035751/in/dateposted-public/)
       - [IBM Manager's Choice Award - 2016](https://www.flickr.com/photos/15201803@N00/35047881805/in/dateposted-public/)
