--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ content:
       - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
-      - [Workshop - Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
+      - [Workshop - Static Web Apps with CICD on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101](https://brifw.com/festival-2021/)      
       - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)  
       - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 - pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)      
