--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,7 @@ content:
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
       - [Workshop - Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
       - [Conf42 Python 2022 - Microsoft loves Conf42 Python](https://www.conf42.com/2022-01-25-microsoft-loves-conf42-python)
+      - [Conf42 Golang 2022 - Microsoft loves Conf42 Golang](https://www.conf42.com/2022-03-24-microsoft-golang-sponsor-announcement)
       - [Guest Lecturer - Hyperledger Technology Workshop - DLT Certification Program - WBS UK](https://www.flickr.com/photos/15201803@N00/48974460052/in/album-72157632977371930/)
       - [Introduction to Blockchain - IT in Dublin Meetup](https://www.flickr.com/photos/15201803@N00/albums/72157670950525778)
       - [Introduction to Blockchain and Blockchain on Azure - Portuguese](https://twitter.com/CloudLunchLearn/status/1393031069100818439)
