--- a/_config.yml
+++ b/_config.yml
@@ -54,17 +54,23 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hello, I’m Juarez Junior, Azure Developer Relations Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
-  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering as well as startup relationship management comprising collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners. Ability to present to both technical and non-technical audiences as well as engage the C-Level in technology and business transformation journeys.
+  I have 26 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer (16 years in total, and Developer Relations as a Developer Advocate (10 years).
+  
+  I’m an expert in DevOps, Infrastructure as Code (IaC), Cloud Native, and Continuous Integration and Delivery (CI/CD).
 
-  Experience with developer relations and developer marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions as well as events organization and promotion. 
+  Besides, I am extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), Containers and Kubernetes, Blockchain including Hyperledger Fabric, Quorum and Ethereum, Application Development (AppDev), Software / Systems / Cloud Architecture, and Mobile Platforms.
 
-  I am an expert in Cloud Computing, Containers and Kubernetes, Blockchain, the Java language and its platforms (Java SE, EE, Embedded), JVMs - Java Virtual Machines, Application Development, Software / Systems / Cloud Architecture, and Mobile Platforms.
+  I'm a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, Javascript, and lately, I've been learning Rust.
 
-  I have acquired solid knowledge and experience over the last 20 years by working as a Developer Advocate, Technical Evangelist, Cloud and DevOps Architect, Tech Community Manager, Software Architect, Software and Solutions Engineer, and Technical Lead being part of global, distributed teams at several big technology corporations.
+  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, and subject matter experts, and business partners. 
 
-  I have been entitled as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, Nokia Developer Champion as well as received many awards such as IBM Manager’s Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor. 
+  Experience with developer relations and developer marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions, events organization and promotion.
 
-  My current interests are: Blockchain, IoT, Hyperledger, Ethereum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
+  Experience in engaging the C-Level in technology and business transformation journeys. Business and technical acumen to explain complex business and technology-related scenarios to technical and non-technical audiences.
+
+  Previously, IBM nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, and Evangelist for IBM Mobile, Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
+
+  My current interests are: Blockchain, IoT, AI, XR, Hyperledger, Ethereum, Quorum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
   
   Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SolutionsArchitecture
 
