--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   My current interests are: Blockchain, IoT, AI, XR, Hyperledger, Ethereum, Quorum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
   
-  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SolutionsArchitecture
+  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SoftwareArchitecture #SolutionsArchitecture
 
 content:
     
