--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hello, I’m Juarez Junior, Azure Developer Relations Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
-  I have 26 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer (16 years in total, and Developer Relations as a Developer Advocate (10 years).
+  I have 26 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer (16 years in total), and Developer Relations as a Developer Advocate (10 years).
   
   I’m an expert in DevOps, Infrastructure as Code (IaC), Cloud Native, and Continuous Integration and Delivery (CI/CD).
 
