--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior
-title: Azure Developer Relations Lead - Microsoft
+title: Senior Prinicipal Java Developer Evangelist @Oracle 🥑
 email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
 
@@ -52,7 +52,9 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hello, I’m Juarez Junior, Azure Developer Relations Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
+  I’m Juarez Junior - Senior Prinicipal #Java Developer Evangelist @Oracle 🥑.
+  
+  Previously, an Azure Developer Relations Lead at Microsoft, Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
   I have 26 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer, and Developer Relations as a Developer Advocate.
   
