--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   Previously, an Azure Developer Relations Lead at Microsoft, Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
-  I have 26 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer, and Developer Relations as a Developer Advocate.
+  I have 27 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer, and Developer Relations as a Developer Advocate.
   
   I’m an expert in DevOps, Infrastructure as Code (IaC), Cloud Native, and Continuous Integration and Delivery (CI/CD).
 
@@ -378,8 +378,20 @@ content:
       - [Microsoft OpenHack - DevOps](https://www.credly.com/badges/63ce96f3-9a31-47b6-bbe0-4f8bfe1f6ff3)
       - [Microsoft OpenHack - IoT Operations Gateway](https://www.credly.com/badges/6d4af926-08bf-409a-aa9a-54f0653070b9)
       - [Microsoft OpenHack - Modern Data Warehousing](https://www.credly.com/badges/f27c83fb-1f1a-4d2f-a8c6-9326eb6ca87d)  
-
       
+  - title: Experience # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: Oracle
+        link: developer.oracle.com/        
+        sub_title: Senior Principal Java Developer Evangelist
+        caption: August 2022 - Present
+        quote: >
+          https://developer.oracle.com/
+        description: | # this will include new lines to allow paragraphs
+            I'm currently playing a role as a Sr. Principal Java Developer Evangelist.   
+
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
@@ -387,11 +399,11 @@ content:
         title: Microsoft
         link: www.microsoft.com        
         sub_title: Azure Developer Relations Lead
-        caption: July 2019 - Present
+        caption: July 2019 - August 2022
         quote: >
           https://developer.microsoft.com/en-ie/
         description: | # this will include new lines to allow paragraphs
-            I’m currently playing a role as the Azure Developer Relations Lead for Microsoft in Ireland. The developer outreach activities I manage comprise community collaboration and feedback management, online and in-person events such as webinars, technical workshops, conferences, hackathons, training and certification events, and local meetups. Concerning the last couple of fiscal years in Microsoft (FY20, FY21), I delivered results above and beyond all the KPIs and ambitions for the DevRel programs I manage (12 programs). From a technical standpoint, I’m the Azure Blockchain Developer Advocate for Microsoft in Western Europe (14 countries) and supported many engagements in the area.
+            I've played a role as the Azure Developer Relations Lead for Microsoft in Ireland. The developer outreach activities I manage comprise community collaboration and feedback management, online and in-person events such as webinars, technical workshops, conferences, hackathons, training and certification events, and local meetups. Concerning the last couple of fiscal years in Microsoft (FY20, FY21), I delivered results above and beyond all the KPIs and ambitions for the DevRel programs I manage (12 programs). From a technical standpoint, I’m the Azure Blockchain Developer Advocate for Microsoft in Western Europe (14 countries) and supported many engagements in the area.
   
   - title: 
     layout: list # Type of content section (list/text)
