--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,9 @@ about_content: | # this will include new lines to allow paragraphs
   
   I have 27 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer, and Developer Relations as a Developer Advocate.
   
-  I’m an expert in DevOps, Infrastructure as Code (IaC), Cloud Native, and Continuous Integration and Delivery (CI/CD).
+  I’m an expert in Java, DevOps, Infrastructure as Code (IaC), Continuous Integration and Delivery (CI/CD), and Cloud Native.
 
-  Besides, I am extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), Containers and Kubernetes, Blockchain including Hyperledger Fabric, Quorum and Ethereum, Application Development (AppDev), Software / Systems / Cloud Architecture, and Mobile Platforms.
+  Besides, I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), Containers and Kubernetes, Blockchain including Hyperledger Fabric, Quorum and Ethereum, Application Development (AppDev), Software / Systems / Cloud Architecture, and Mobile Platforms.
 
   I'm a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, Javascript, and lately, I've been learning Rust.
 
@@ -72,9 +72,9 @@ about_content: | # this will include new lines to allow paragraphs
 
   Previously, IBM nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, and Evangelist for IBM Mobile, Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  My current interests are: Blockchain, IoT, AI, XR, Hyperledger, Ethereum, Quorum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
+  My current interests are: Java, Rust, Blockchain, IoT, AI, XR, Hyperledger, Ethereum, Quorum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
   
-  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SoftwareArchitecture #SolutionsArchitecture
+  Invite me to speak about #Java, #Blockchain, #OracleDatabase, #OracleCloud, #Microservices, #Azure, #SoftwareArchitecture, #SolutionsArchitecture and #EmergingTechnologies
 
 content:
     
