--- a/_config.yml
+++ b/_config.yml
@@ -70,11 +70,9 @@ about_content: | # this will include new lines to allow paragraphs
 
   Experience in engaging the C-Level in technology and business transformation journeys. Business and technical acumen to explain complex business and technology-related scenarios to technical and non-technical audiences.
 
-  Previously, IBM nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, and Evangelist for IBM Mobile, Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
+  Previously, I've acted as a Mentor for Microsoft for Startups, IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  My current interests are: Java, Rust, Blockchain, IoT, AI, XR, Hyperledger, Ethereum, Quorum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
-  
-  Invite me to speak about #Java, #Blockchain, #OracleDatabase, #OracleCloud, #Microservices, #Azure, #SoftwareArchitecture, #SolutionsArchitecture and #EmergingTechnologies
+  Invite me to speak about Java, Oracle Database, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, Microservices, Software Architecture, Solutions Architecture and Emerging Technologies (IoT, AI, Blockchain, XR).
 
 content:
     
