--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,9 @@ about_content: | # this will include new lines to allow paragraphs
 
   Experience in engaging the C-Level in technology and business transformation journeys. Business and technical acumen to explain complex business and technology-related scenarios to technical and non-technical audiences.
 
-  Previously, I've acted as a Mentor for Microsoft for Startups, IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
+  I've acted as a Mentor for Microsoft for Startups, IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  Invite me to speak about Java, Oracle Database, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, Microservices, Software Architecture, Solutions Architecture and Emerging Technologies (IoT, AI, Blockchain, XR).
+  Invite me to speak about Java, Oracle Autonomous Database,  Microservices, Software Architecture, Solutions Architecture, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, and Emerging Technologies (IoT, AI, Blockchain, XR).
 
 content:
     
