--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,9 @@ about_content: | # this will include new lines to allow paragraphs
   
   Previously, an Azure Developer Relations Lead at Microsoft, Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
-  I have 27 years of professional experience in IT, primarily as a Software/Solutions Architect and Engineer, and Developer Relations as a Developer Advocate.
+  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate. Feel free to invite me to speak about Java, JDBC, Oracle Autonomous Database, and Microservices.
   
-  I’m an expert in Java, DevOps, Infrastructure as Code (IaC), Continuous Integration and Delivery (CI/CD), and Cloud Native.
+  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). Besides, good knowledge and experience with Blockchain, DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native.
 
   Besides, I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), Containers and Kubernetes, Blockchain including Hyperledger Fabric, Quorum and Ethereum, Application Development (AppDev), Software / Systems / Cloud Architecture, and Mobile Platforms.
 
