--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,8 @@ about_content: | # this will include new lines to allow paragraphs
   
   I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate. Feel free to invite me to speak about Java, JDBC, Oracle Autonomous Database, and Microservices.
   
-  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). Besides, good knowledge and experience with Blockchain, DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native.
-
-  Besides, I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), Containers and Kubernetes, Blockchain including Hyperledger Fabric, Quorum and Ethereum, Application Development (AppDev), Software / Systems / Cloud Architecture, and Mobile Platforms.
+  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), Cloud Native.
+  Besides, experience with Blockchain including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
 
   I'm a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, Javascript, and lately, I've been learning Rust.
 
