--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   Previously, an Azure Developer Relations Lead at Microsoft, Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
   
-  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate. Feel free to invite me to speak about Java, JDBC, Oracle Autonomous Database, and Microservices.
+  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate. 
   
   I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), Cloud Native.
   Besides, experience with Blockchain including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
