--- a/_config.yml
+++ b/_config.yml
@@ -52,26 +52,26 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
+  
   I’m Juarez Junior - Senior Principal #Java Developer Evangelist @Oracle ☕️🥑.
+   
+  Previously, an Azure Developer Relations Lead at Microsoft, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
+   
+  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate.
+   
+  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native. Besides, experience with Blockchain, including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
   
-  Previously, an Azure Developer Relations Lead at Microsoft, Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
+  I’m a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, and Javascript, and lately, I’ve been learning Rust.
+
+  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
   
-  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate. 
-  
-  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), Cloud Native.
-  Besides, experience with Blockchain including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
-
-  I'm a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, Javascript, and lately, I've been learning Rust.
-
-  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, and subject matter experts, and business partners. 
-
-  Experience with developer relations and developer marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions, events organization and promotion.
+  Experience with developer relations and marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions, events organization, and promotion.
 
   Experience in engaging the C-Level in technology and business transformation journeys. Business and technical acumen to explain complex business and technology-related scenarios to technical and non-technical audiences.
 
-  I've acted as a Mentor for Microsoft for Startups, IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
+  I've acted as a Mentor for Microsoft for Startups. IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development, Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  Invite me to speak about Java, Oracle Autonomous Database,  Microservices, Software Architecture, Solutions Architecture, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, and Emerging Technologies (IoT, AI, Blockchain, XR).
+  Feel free to invite me to speak about Java, Oracle Autonomous Database,  Microservices, Software Architecture, Solutions Architecture, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, and Emerging Technologies (IoT, AI, Blockchain, XR).
 
 content:
     
