--- a/_config.yml
+++ b/_config.yml
@@ -395,7 +395,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             I'm currently playing a role as a Sr. Principal Java Developer Evangelist.   
 
-  - title: Experience # Title for the section
+  - title: 
     layout: list # Type of content section (list/text)
     content:
       - layout: left
