--- a/_config.yml
+++ b/_config.yml
@@ -387,7 +387,7 @@ content:
     content:
       - layout: left
         title: Oracle
-        link: developer.oracle.com/        
+        link: developer.oracle.com        
         sub_title: Senior Principal Java Developer Evangelist
         caption: August 2022 - Present
         quote: >
@@ -400,11 +400,11 @@ content:
     content:
       - layout: left
         title: Microsoft
-        link: www.microsoft.com        
+        link: developer.microsoft.com        
         sub_title: Azure Developer Relations Lead
         caption: July 2019 - August 2022
         quote: >
-          https://developer.microsoft.com/en-ie/
+          https://microsoft.com/en-ie/
         description: | # this will include new lines to allow paragraphs
             I've played a role as the Azure Developer Relations Lead for Microsoft in Ireland. The developer outreach activities I manage comprise community collaboration and feedback management, online and in-person events such as webinars, technical workshops, conferences, hackathons, training and certification events, and local meetups. Concerning the last couple of fiscal years in Microsoft (FY20, FY21), I delivered results above and beyond all the KPIs and ambitions for the DevRel programs I manage (12 programs). From a technical standpoint, I’m the Azure Blockchain Developer Advocate for Microsoft in Western Europe (14 countries) and supported many engagements in the area.
   
