--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,9 @@ content:
       - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
       - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
       - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
+      - [Mêlée Numérique 2022 - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://lameleeexternal.app.swapcard.com/event/melee-numerique-2022/planning/UGxhbm5pbmdfMTAwMzI2Ng)
+      - [Cloud Talks - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads - pt-BR](https://www.cloudconferenceday.com/cloudtalks)
+      - [Cloud Conference Day - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads - pt-BR](https://www.linkedin.com/feed/update/urn:li:activity:6983455087742345216/)
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
       - [Workshop - Static Web Apps with CICD on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
@@ -233,6 +236,8 @@ content:
       - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 3: Getting Started with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-3-getting-started-with-oracle-machine-1b72224b4112)
       
       Java, Python, Golang, Javascript, Android
+      - [Introduction to Oracle JDBC 21c Driver Support for Virtual Threads](https://juarezjunior.medium.com/introduction-to-oracle-jdbc-21c-driver-support-for-virtual-threads-189b918c56f4)
+      - [Invoking Stored Procedures with JDBC CallableStatements](https://medium.com/oracledevs/getting-started-with-invoking-stored-procedures-using-jdbc-and-callablestatement-6a247fd1957a)
       - [High-throughput stream processing with the Java Library for Reactive Streams Ingestion (RSI), Virtual Threads, and the Oracle ATP Database](https://medium.com/oracledevs/high-throughput-stream-processing-with-the-java-library-for-reactive-streams-ingestion-rsi-8aa0fc9d167)
       - [Getting Started with the Java library for Reactive Streams Ingestion (RSI)](https://medium.com/oracledevs/getting-started-with-the-java-library-for-reactive-streams-ingestion-rsi-afbc808e6e24)
       - [How to create a Helidon Microservices application (MicroProfile) with Maven and Eclipse](https://juarezjunior.medium.com/how-to-create-a-helidon-microservices-application-microprofile-with-maven-and-eclipse-239acd24069)
