--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   
-  I’m Juarez Junior - Senior Principal #Java Developer Evangelist @Oracle ☕️🥑.
+  I’m Juarez Junior, Senior Principal Java Developer Evangelist - Oracle ☕️🥑.
    
   Previously, an Azure Developer Relations Lead at Microsoft, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
    
