--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Juarez Barbosa Junior
+name: Juarez Barbosa Junior, MSc
 title: Senior Principal Java Developer Evangelist - Oracle. ☕️🥑
 email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
